--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="text-center text-white py-4" style="background-color: #003366;">
+<footer class="mt-auto text-center text-white py-4" style="background-color: #003366;">
   <div class="container d-flex justify-content-between align-items-center">
     <!-- Copyright notice -->
     <p class="mb-0">&copy; BBY-20, All rights reserved.</p>
