--- a/views/templates/poll.ejs
+++ b/views/templates/poll.ejs
@@ -44,7 +44,7 @@
                     </div>
                     <% }) %>
 
-                      <form action="/unvote" method="POST" class="mt-3">
+                      <form action="/unvote" method="POST" class="mt-3 unvote-form">
                         <input type="hidden" name="pollId" value="<%= poll._id %>">
                         <button type="submit" class="btn btn-sm btn-outline-danger">
                           Remove my vote
