--- a/views/createPoll.ejs
+++ b/views/createPoll.ejs
@@ -142,9 +142,10 @@
               </div>
             <% } %>
 
-            <!-- Submit Button -->
+            <!-- Submit & Reset Button -->
             <div class="text-center">
               <button type="submit" class="btn btn-primary">Submit Poll</button>
+              <button type="button" id="resetBtn" class="btn btn-outline-secondary ms-2">Reset</button>             
             </div>
           </form>
         </div>
@@ -216,6 +217,27 @@
           });
         </script>
         <% } %>
+
+        <script>
+          document.getElementById('resetBtn').addEventListener('click', function() {
+            Swal.fire({
+              title: 'Clear all fields?',
+              text: 'This will erase everything you’ve entered.',
+              icon: 'warning',
+              showCancelButton: true,
+              confirmButtonText: 'Yes, reset',
+              cancelButtonText: 'Cancel',
+              confirmButtonColor: '#d33'
+            }).then(result => {
+              if (result.isConfirmed) {
+                document.querySelector('form').reset();
+
+                document.getElementById('selectedTags').innerHTML = '';
+                document.getElementById('tagsInput').value = '';
+              }
+            });
+          });
+        </script>
 
 </body>
 </html>
