--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   flex-direction: column;
   color: white;
-  text-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
+  text-shadow: none;
 }
 
 main {
